trying to duplicate the rainbow gradient view controller and container view

--- a/RandomFeatures/RandomFeatures/Base.lproj/Main.storyboard
+++ b/RandomFeatures/RandomFeatures/Base.lproj/Main.storyboard
@@ -1013,5 +1013,25 @@
             </objects>
             <point key="canvasLocation" x="290.5" y="958.5"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="o09-TB-xv5">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gy6-tM-h09" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="7E6-PS-anb" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="f8n-Yy-tpx"/>
+                        <viewControllerLayoutGuide type="bottom" id="2vG-2E-yF7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CIx-8S-v2n">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-58" y="1432"/>
+        </scene>
     </scenes>
 </document>
